PWA work: basic offline page and service worker

--- a/public/offline.html
+++ b/public/offline.html
@@ -17,24 +17,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./service-worker.js').then(
-            (reg) => {
-              console.log('ServiceWorker registration successful with scope: ', reg.scope);
-            },
-            (err) => {
-              console.log("ServiceWorker registration failed: ", err);
-            }
-          );
-        });
-      }
-    </script>
+    <h1>You are offline, silly!</h1>
   </body>
 </html>
