--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ff5276" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="<%= BASE_URL %>manifest.webmanifest">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -25,7 +25,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./service-worker.js').then(
+          navigator.serviceWorker.register('<%= BASE_URL %>service-worker.js').then(
             (reg) => {
               console.log('ServiceWorker registration successful with scope: ', reg.scope);
             },
